--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">XlsToJson</string>
-    <string name="pick_file">Pick File</string>
+    <string name="pick_file">Pick .XLS File</string>
     <string name="rationale_doc_picker">We need this permission to read documents from device.</string>
-    <string name="path">path</string>
+    <string name="path">android path</string>
+    <string name="convert_json_to_xls">Convert JSON to XLS</string>
+    <string name="json_to_excel">JSON to EXCEL</string>
+    <string name="excel_to_json">EXCEL to JSON</string>
+    <string name="expend">Expend</string>
+    <string name="collapse">Collapse</string>
 </resources>
